# genovisio_annotation

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  conda_example.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml  release-please.yml
annotation/: __init__.py  annotation.py  index.html  main.py
annotation/src/: annotation.py  cnv_region.py  collections.py  constants.py  core.py  entry_schemas.py  enums.py  exceptions.py  schemas.py
cnv_region_annot/: index.html
docs/: annotation.md  cnv_region_annot.md  enums.md  outputs.md
enums/: index.html
outputs/: index.html
search/: search_index.json
tests/: conftest.py
tests/data/: cnv.json  genes.json  gnomad.json  higenes.json  hiregions.json  regulatory.json
tests/tests/: test_cnv.py  test_db.py  test_gnomad.py
